2005-09-21  Sam Steingold  <sds@gnu.org>

	* misc.d (map_lisp_to_c, map_c_to_lisp): fixed EXPECTED-TYPE

2005-09-20  Sam Steingold  <sds@gnu.org>

	instead of DEFCHECKER creating a bunch of undebuggable identical
	functions, it now creates a data structure that is passed to a few
	standard built-in functions
	* misc.d (map_to_alist, map_lisp_to_c, map_c_to_lisp, map_c_to_list)
	(map_list_to_c): implemented
	* lispbibl.d (c_lisp_pair_t, c_lisp_map_t): added, export to clisp.h
	* utils/modprep.lisp (print-tables-1): instead of checked
	functions, output #defines using map_* functions
	* modules/berkeley-db/bdb.c, modules/i18n/gettext.c:
	* modules/pcre/cpcre.c, modules/rawsock/rawsock.c:
	* modules/syscalls/calls.c: updated to use the map_* functions

2005-09-20  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/posix.lisp: do (ext:re-export "POSIX" "EXT") at
	the end of the file to re-export all POSIX symbols

2005-09-19  Sam Steingold  <sds@gnu.org>

	* modules/bindings/win32/win32.lisp (GetProcessVersion)
	(GetThreadPriority, GetThreadPriorityBoost, GetProcessPriorityBoost)
	(with-handle): added

2005-09-19  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (MAKE-SOCKADDR): do not make
	unwarranted assumptions about struct sockaddr structure
	(SENDTO): pass size to sendto()

2005-09-17  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1): do not use NOTREACHED,
	issue a TYPE-ERROR instead

2005-09-16  Sam Steingold  <sds@gnu.org>

	removed the implicit assumption that struct sockaddr consists
	of 2 slots sa_family and sa_data with no padding - fixes BSD
	* modules/rawsock/rawsock.c (my_check_argument): use GETTEXT
	(SOCKADDR-FAMILY-SIZE): removed
	(SOCKADDR-SLOT): new function, replaces SOCKADDR-FAMILY-SIZE;
	not exported
	* modules/rawsock/sock.lisp (sockaddr-data): use SOCKADDR-SLOT;
	use EXPORTING:DEFUN, export SOCKADDR-P and MSGHDR-P

2005-09-16  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (check_ut_type):