@@ -1,5 +1,11 @@
 2005-09-21  Sam Steingold  <sds@gnu.org>
 
+	* functions.lisp (function-lambda-expression):
+	handle compiled (SETF FOO)
+	Reported by Pascal Bourguignon <pjb@informatimago.com>
+
+2005-09-21  Sam Steingold  <sds@gnu.org>
+
 	* misc.d (map_lisp_to_c, map_c_to_lisp): fixed EXPECTED-TYPE
 
 2005-09-20  Sam Steingold  <sds@gnu.org>
